# super-ai

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.yml
api/: .gitignore  .pdm-python  README.md  pyproject.toml
api/app/: dependencies.py  main.py
api/app/db/: __init__.py
api/app/models/: __init__.py
api/app/schemas/: __init__.py
web/: README.md  index.html  tailwind.config.ts
web/Designs/: DESIGN_SYSTEM.md
web/src/: App.tsx  index.css
web/src/components/: .keep  Navbar.tsx  ProtectedRoute.tsx  ThemeToggle.tsx
web/src/components/ui/: sonner.tsx
web/src/hooks/: useAuth.tsx  useTheme.tsx
web/src/pages/: Chat.tsx  Help.tsx  Landing.tsx  Login.tsx  Profile.tsx  Settings.tsx  Signup.tsx
